# KGraphPy

./: .gitignore  README.md  ReadMe.adoc  demo_friday13.ipynb  graphdb_connection.py  main.py  parser_demo.ipynb  pyproject.toml  quick_demo.ipynb
cim_plugin/: __init__.py  cimtrig_serializer.py  cimxml.py  cimxml_parser.py  cimxml_serializer.py  enriching.py  exceptions.py  graph.py  header.py  header_conversion.py  header_validation.py  id_profiles.yaml  jsonld_utilities.py  log_config.py  namespaces.py  processor.py  provenance.py  qualifiers.py  rdf_id_selection.py  to_file_strategies.py  utilities.py
stress_tests/: test_stress.py
tests/: fixtures.py  test_cimtrig_serializer.py  test_cimxml.py  test_cimxml_linkml.py  test_cimxml_methods.py  test_cimxml_parser.py  test_cimxml_parser_linkml.py  test_cimxml_parser_methods.py  test_cimxml_serializer.py  test_enriching.py  test_graph.py  test_header.py  test_header_conversion.py  test_header_validation.py  test_jsonld_utilities.py  test_namespaces.py  test_processor.py  test_provenance.py  test_qualifiers.py  test_rdf_id_selection.py  test_to_file_strategies.py  test_utilities.py
