[project]
name = "rdflib-cim"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "linkml>=1.9.6",
    "rdflib[graphdb]>=7.5.0",
]


[tool.pytest.ini_options]
pythonpath = [
    "."
]
markers = [
    "stress: long-running stress tests"
]
addopts = "-m 'not stress' -rP"